--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         facilisis purus. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus,
                         ipsum
                         in tempus fermentum, orci leo facilisis purus.</p>
-                    <button type="button" class="btn btn-warning btn-lg center-block btn_about" href="#">LEARN MORE</button>
+                    <button type="button" class="btn btn-warning btn-lg btn_about" href="#">LEARN MORE</button>
                 </div>
                 <div class="col-md-5 video">
                     <img src="images/video.png" alt="video">
@@ -139,7 +139,7 @@
             </div>
             <div class="gallery">
                 <div class="row">
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -147,7 +147,7 @@
                         </div>
                         <img src="images/Img1.png" alt="gallery 1">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -155,7 +155,7 @@
                         </div>
                         <img src="images/Img2.png" alt="gallery 2">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -163,7 +163,7 @@
                         </div>
                         <img src="images/Img3.png" alt="gallery 3">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -181,7 +181,7 @@
                         </div>
                         <img src="images/Img5.png" alt="gallery 5">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -189,7 +189,7 @@
                         </div>
                         <img src="images/Img6.png" alt="gallery 6">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -197,7 +197,7 @@
                         </div>
                         <img src="images/Img7.png" alt="gallery 7">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -215,7 +215,7 @@
                         </div>
                         <img src="images/Img9.png" alt="gallery 9">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -223,7 +223,7 @@
                         </div>
                         <img src="images/Img10.png" alt="gallery 10">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -231,7 +231,7 @@
                         </div>
                         <img src="images/Img11.png" alt="gallery 11">
                     </div>
-                    <div class="col-md-3 img_gallery">
+                    <div class="col-md-3 col-sm-6 img_gallery">
                         <div class="overlay">
                             <h2>ABOUT</h2>
                             <p>Praesent metus urna, feugiat<br>
@@ -249,7 +249,7 @@
             <h1 class="title_team">OUR TEAM</h1>
             <p class="sub_title_team">OUR CO-WORKERS</p>
             <div class="row memrow">
-                <div class="col-md-4 member">
+                <div class="col-lg-4 col-md-12 member">
                     <img src="images/member1.png">
                     <h2 class="tea_title">JANE DOE</h2>
                     <p class="tea_sub_title">Master mind</p>
@@ -277,7 +277,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 member">
+                <div class="col-lg-4 col-md-12 member">
                     <img src="images/member2.png">
                     <h2 class="tea_title">MIKE SHILLER</h2>
                     <p class="tea_sub_title">Creative head</p>
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 member">
+                <div class="col-lg-4 col-md-12 member">
                     <img src="images/member3.png">
                     <h2 class="tea_title">ANNA JOHNS</h2>
                     <p class="tea_sub_title">Technical lead</p>
@@ -374,7 +374,7 @@
             <h1 class="title_price">PRICE</h1>
             <p class="sub_title_price">PRICING TABLE</p>
             <div class="row pro_row">
-                <div class="col-md-3 product">
+                <div class="col-md-6 product">
                     <h3 class="pro_name">EXPRESS</h3>
                     <h2 class="pro_price">$ 9.99</h2>
                     <p class="month">/MONTH</p>
@@ -382,7 +382,7 @@
                         tracking<br>-<br>Custom views</p>
                     <button type="button" class="btn btn-warning btn-lg center-block btn_pro" href="#">CHOOSE</button>
                 </div>
-                <div class="col-md-3 product">
+                <div class="col-md-6 product">
                     <h3 class="pro_name">STANDART</h3>
                     <h2 class="pro_price">$ 14.99</h2>
                     <p class="month">/MONTH</p>
@@ -390,7 +390,7 @@
                         tracking<br>-<br>Custom views</p>
                     <button type="button" class="btn btn-warning btn-lg center-block btn_pro" href="#">CHOOSE</button>
                 </div>
-                <div class="col-md-3 product">
+                <div class="col-md-6 product">
                     <h3 class="pro_name">LUXE</h3>
                     <h2 class="pro_price">$ 19.99</h2>
                     <p class="month">/MONTH</p>
@@ -398,7 +398,7 @@
                         tracking<br>-<br>Custom views</p>
                     <button type="button" class="btn btn-warning btn-lg center-block btn_pro" href="#">CHOOSE</button>
                 </div>
-                <div class="col-md-3 product">
+                <div class="col-md-6 product">
                     <h3 class="pro_name">PREMIUM</h3>
                     <h2 class="pro_price">$ 24.99</h2>
                     <p class="month">/MONTH</p>
